--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,13 @@
-name: Python CI
+name: CI Pipeline with Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  run-python-script:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,12 +17,19 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.9'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+        run: pip install pytest
 
-      - name: Run Python script
+      - name: Run tests
         run: |
-          python main.py
+          python -m unittest test_addition.py
+
+      - name: Archive code as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: python-code
+          path: |
+            addition.py
+            test_addition.py
