--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline with Tests
+name: CI Pipeline
 
 on:
   push:
@@ -11,25 +11,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x'
 
-      - name: Install dependencies
-        run: pip install pytest
+    - name: Install dependencies
+      run: pip install -r requirements.txt || echo "No requirements.txt found"
 
-      - name: Run tests
-        run: |
-          python -m unittest test_addition.py
+    - name: Run tests and generate output
+      run: python test_sample.py
 
-      - name: Archive code as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-code
-          path: |
-            addition.py
-            test_addition.py
+    - name: Upload test result
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: test_output.txt
