--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,45 +1,45 @@
-name: Deploy to S3
+name: CI-CD Python Build and Deploy
 
 on:
   push:
-    branches:
-      - main  # or your target branch
-
-env:
-  AWS_S3_BUCKET: justcausaualbucket78
-  AWS_REGION: us-east-1
-  SOURCE_DIR: .  # update this if you only want to upload a subfolder
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build-test-deploy:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.x'
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+    - name: Run Unit Tests
+      run: |
+        python -m unittest test_addition.py
+        python -m unittest test_main.py
+
+    - name: Zip project files
+      run: |
+        zip -r project.zip . -x "*.git*" "*.github*"
 
     - name: Upload to S3
-      run: |
-        aws s3 sync ${{ env.SOURCE_DIR }} s3://${{ env.AWS_S3_BUCKET }} \
-          --region ${{ env.AWS_REGION }} \
-          --follow-symlinks \
-          --delete
-
-          
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --exact-timestamps
+      env:
+        AWS_S3_BUCKET: justcausaualbucket78
+        AWS_REGION: us-east-1
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        SOURCE_DIR: '.'
+        DEST_DIR: '/'
