--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,16 +1,17 @@
-name: CI/CD Pipeline with AWS
+name: Python CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Python
@@ -19,24 +20,25 @@ jobs:
           python-version: 3.10
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run Unit Tests
-        run: python -m unittest test_main.py
-
-      - name: Zip project files
         run: |
-          mkdir build
-          cp main.py requirements.txt build/
-          cd build
-          zip ../artifact.zip *
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      - name: Run Tests
+        run: |
+          python -m unittest test_main.py
+
+      - name: Create deployment package
+        run: |
+          mkdir package
+          cp main.py requirements.txt package/
+          cd package
+          zip -r ../deployment_package.zip .
 
       - name: Upload to S3
-        run: aws s3 cp artifact.zip s3://justcausaualbucket78/artifact.zip
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+        run: |
+          aws s3 cp deployment_package.zip s3://justcausaualbucket78/
