--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,13 +1,13 @@
-name: Python CI/CD Pipeline
+name: Deploy to AWS S3 with Manual Approval
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  build-and-upload:
+    name: Build and Upload to S3 (Staging)
     runs-on: ubuntu-latest
 
     steps:
@@ -20,25 +20,40 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
-      - name: Run Tests
-        run: |
-          python -m unittest test_main.py
+      - name: Run tests
+        run: python -m unittest discover
 
-      - name: Create deployment package
+      - name: Zip the code
         run: |
-          mkdir package
-          cp main.py requirements.txt package/
-          cd package
-          zip -r ../deployment_package.zip .
+          zip -r app.zip main.py requirements.txt test_main.py
 
-      - name: Upload to S3
+      - name: Upload to S3 (Staging)
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read
+        env:
+          AWS_S3_BUCKET: justcausaualbucket78
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+          SOURCE_DIR: .
+          DEST_DIR: staging/
+
+  deploy-to-prod:
+    name: Manual Approval & Deploy to Production
+    needs: build-and-upload
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://s3.console.aws.amazon.com/s3/buckets/justcausaualbucket78/production/
+
+    steps:
+      - name: Copy from Staging to Production
+        run: |
+          aws s3 cp s3://justcausaualbucket78/staging/app.zip s3://justcausaualbucket78/production/app.zip
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
-        run: |
-          aws s3 cp deployment_package.zip s3://justcausaualbucket78/
