--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,39 +1,54 @@
-name: CI/CD Pipeline
+name: Deploy Python App to S3
 
 on:
   push:
     branches:
       - main
-      - feature
-  pull_request:
 
 jobs:
-  deploy:
+  zip-and-upload:
+    name: Zip and Upload to S3 Staging
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: pip install --upgrade pip
 
-      - name: Build project
-        run: npm run build
+    - name: Zip application
+      run: python zip-app.py
 
-      - name: Deploy to S3 (Staging)
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --delete
-        env:
-          AWS_S3_BUCKET: justcausaualbucket01
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: us-east-1
-          SOURCE_DIR: build
-          DEST_DIR: staging
+    - name: Upload app.zip to S3 staging
+      uses: aws-actions/s3-sync@v1
+      with:
+        bucket: justcausaualbucket01
+        region: us-east-1
+        source: .
+        destination: staging/
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+  approve-and-promote:
+    name: Promote to Production
+    needs: zip-and-upload
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://justcausaualbucket78.s3.amazonaws.com/production/app.zip
+
+    steps:
+    - name: Copy app.zip to production
+      run: |
+        aws s3 cp s3://justcausaualbucket01/staging/app.zip s3://justcausaualbucket78/production/app.zip
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: us-east-1
