--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,54 +1,66 @@
-name: Deploy Python App to S3
+name: CI/CD Pipeline - S3 Deployment
 
 on:
   push:
     branches:
-      - main
+      - feature
 
 jobs:
-  zip-and-upload:
-    name: Zip and Upload to S3 Staging
+  build-and-upload:
+    name: Build & Upload to S3 (Staging)
     runs-on: ubuntu-latest
+    environment: staging
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.11
 
-    - name: Install dependencies
-      run: pip install --upgrade pip
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    - name: Zip application
-      run: python zip-app.py
+      - name: Run Tests
+        run: |
+          pytest test_main.py
 
-    - name: Upload app.zip to S3 staging
-      uses: aws-actions/s3-sync@v1
-      with:
-        bucket: justcausaualbucket01
-        region: us-east-1
-        source: .
-        destination: staging/
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      - name: Zip the app
+        run: |
+          zip app.zip main.py requirements.txt test_main.py
 
-  approve-and-promote:
-    name: Promote to Production
-    needs: zip-and-upload
+      - name: Upload app.zip to S3 staging
+        run: |
+          aws s3 cp app.zip s3://justcausaualbucket01/staging/app.zip
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+
+  manual-approval-and-deploy:
+    name: Manual Approval & Deploy to S3 (Production)
     runs-on: ubuntu-latest
+    needs: build-and-upload
     environment:
       name: production
       url: https://justcausaualbucket78.s3.amazonaws.com/production/app.zip
 
     steps:
-    - name: Copy app.zip to production
-      run: |
-        aws s3 cp s3://justcausaualbucket01/staging/app.zip s3://justcausaualbucket78/production/app.zip
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_DEFAULT_REGION: us-east-1
+      - name: Download app.zip from staging
+        run: |
+          aws s3 cp s3://justcausaualbucket01/staging/app.zip app.zip
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+
+      - name: Upload app.zip to production
+        run: |
+          aws s3 cp app.zip s3://justcausaualbucket78/production/app.zip
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
