--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline - S3 Deployment
+name: CI/CD to S3 Buckets
 
 on:
   push:
@@ -7,32 +7,32 @@ on:
 
 jobs:
   build-and-upload:
-    name: Build & Upload to S3 (Staging)
+    name: Build & Upload to S3 Staging
     runs-on: ubuntu-latest
     environment: staging
 
     steps:
-      - name: Checkout Code
+      - name: Checkout source code
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.11
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
 
-      - name: Run Tests
+      - name: Run tests
         run: |
           pytest test_main.py
 
-      - name: Zip the app
+      - name: Create app.zip artifact
         run: |
           zip app.zip main.py requirements.txt test_main.py
 
-      - name: Upload app.zip to S3 staging
+      - name: Upload to S3 Staging Bucket
         run: |
           aws s3 cp app.zip s3://justcausaualbucket01/staging/app.zip
         env:
@@ -41,7 +41,7 @@ jobs:
           AWS_DEFAULT_REGION: us-east-1
 
   manual-approval-and-deploy:
-    name: Manual Approval & Deploy to S3 (Production)
+    name: Manual Approval & Deploy to Production
     runs-on: ubuntu-latest
     needs: build-and-upload
     environment:
@@ -49,7 +49,7 @@ jobs:
       url: https://justcausaualbucket78.s3.amazonaws.com/production/app.zip
 
     steps:
-      - name: Download app.zip from staging
+      - name: Download from S3 Staging
         run: |
           aws s3 cp s3://justcausaualbucket01/staging/app.zip app.zip
         env:
@@ -57,7 +57,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
 
-      - name: Upload app.zip to production
+      - name: Upload to S3 Production
         run: |
           aws s3 cp app.zip s3://justcausaualbucket78/production/app.zip
         env:
