--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,24 +1,23 @@
-name: CI/CD to S3 Buckets
+name: CI-CD Pipeline for feature/deploy-to-s3
 
 on:
   push:
     branches:
-      - feature
+      - feature/deploy-to-s3   # listens only to this exact branch
+  workflow_dispatch:           # optional: allows manual trigger from GitHub UI
 
 jobs:
   build-and-upload:
-    name: Build & Upload to S3 Staging
     runs-on: ubuntu-latest
-    environment: staging
 
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
@@ -26,41 +25,18 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest test_main.py
+          python test_main.py
 
-      - name: Create app.zip artifact
+      - name: Zip project
         run: |
-          zip app.zip main.py requirements.txt test_main.py
+          zip -r app.zip main.py requirements.txt test_main.py
 
-      - name: Upload to S3 Staging Bucket
-        run: |
-          aws s3 cp app.zip s3://justcausaualbucket01/staging/app.zip
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-
-  manual-approval-and-deploy:
-    name: Manual Approval & Deploy to Production
-    runs-on: ubuntu-latest
-    needs: build-and-upload
-    environment:
-      name: production
-      url: https://justcausaualbucket78.s3.amazonaws.com/production/app.zip
-
-    steps:
-      - name: Download from S3 Staging
-        run: |
-          aws s3 cp s3://justcausaualbucket01/staging/app.zip app.zip
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
-
-      - name: Upload to S3 Production
-        run: |
-          aws s3 cp app.zip s3://justcausaualbucket78/production/app.zip
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
+      - name: Upload artifact to S3 (staging)
+        uses: aws-actions/aws-s3@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          region: us-east-1
+          bucket: justcausaualbucket78
+          source: app.zip
+          destination: staging/app.zip
