--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -1,66 +1,71 @@
-name: CI/CD to S3 Buckets
+name: Deploy to S3
 
 on:
   push:
     branches:
-      - feature
+      - main
+      - feature/deploy-to-s3
+
+permissions:
+  id-token: write
+  contents: read
+
+env:
+  STAGE_BUCKET: justcausaualbucket01
+  PROD_BUCKET: justcausaualbucket-prod01
+  REGION: us-east-1
 
 jobs:
-  build-and-upload:
-    name: Build & Upload to S3 Staging
+  deploy:
+    name: Deploy to Stage Bucket
     runs-on: ubuntu-latest
-    environment: staging
-
+    environment:
+      name: stage
     steps:
-      - name: Checkout source code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          python-version: '3.11'
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ env.REGION }}
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          pytest test_main.py
-
-      - name: Create app.zip artifact
-        run: |
-          zip app.zip main.py requirements.txt test_main.py
-
-      - name: Upload to S3 Staging Bucket
-        run: |
-          aws s3 cp app.zip s3://justcausaualbucket01/staging/app.zip
+      - name: Upload artifact to STAGE bucket
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl private --follow-symlinks --exclude "*" --include "app.zip"
         env:
+          AWS_S3_BUCKET: ${{ env.STAGE_BUCKET }}
+          AWS_REGION: ${{ env.REGION }}
+          SOURCE_DIR: "./build"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
 
-  manual-approval-and-deploy:
-    name: Manual Approval & Deploy to Production
+  deploy-prod:
+    name: Deploy to Prod Bucket
     runs-on: ubuntu-latest
-    needs: build-and-upload
+    needs: deploy
     environment:
       name: production
-      url: https://justcausaualbucket78.s3.amazonaws.com/production/app.zip
-
+      url: https://${{ env.PROD_BUCKET }}.s3.amazonaws.com
     steps:
-      - name: Download from S3 Staging
-        run: |
-          aws s3 cp s3://justcausaualbucket01/staging/app.zip app.zip
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Upload to S3 Production
-        run: |
-          aws s3 cp app.zip s3://justcausaualbucket78/production/app.zip
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ env.REGION }}
+
+      - name: Upload artifact to PROD bucket
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl private --follow-symlinks --exclude "*" --include "app.zip"
         env:
+          AWS_S3_BUCKET: ${{ env.PROD_BUCKET }}
+          AWS_REGION: ${{ env.REGION }}
+          SOURCE_DIR: "./build"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-1
