--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -4,68 +4,47 @@ on:
   push:
     branches:
       - main
-      - feature/deploy-to-s3
-
-permissions:
-  id-token: write
-  contents: read
+    paths:
+      - 'app.zip'
 
 env:
-  STAGE_BUCKET: justcausaualbucket02
-  PROD_BUCKET: justcausaualbucket-prod02
   REGION: us-east-1
+  STAGE_BUCKET: justcausaualbucket01
+  PROD_BUCKET: justcausaualbucket-prod01
 
 jobs:
   deploy:
-    name: Deploy to Stage Bucket
     runs-on: ubuntu-latest
-    environment:
-      name: stage
+
+    strategy:
+      matrix:
+        environment: [stage, production]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          aws-region: ${{ env.REGION }}
-
-      - name: Upload artifact to STAGE bucket
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl private --follow-symlinks --exclude "*" --include "app.zip"
-        env:
-          AWS_S3_BUCKET: ${{ env.STAGE_BUCKET }}
-          AWS_REGION: ${{ env.REGION }}
-          SOURCE_DIR: "./build"
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-  deploy-prod:
-    name: Deploy to Prod Bucket
-    runs-on: ubuntu-latest
-    needs: deploy
-    environment:
-      name: production
-      url: https://${{ env.PROD_BUCKET }}.s3.amazonaws.com
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Set environment variables
+        run: |
+          if [[ "${{ matrix.environment }}" == "production" ]]; then
+            echo "BUCKET_NAME=${{ env.PROD_BUCKET }}" >> $GITHUB_ENV
+          else
+            echo "BUCKET_NAME=${{ env.STAGE_BUCKET }}" >> $GITHUB_ENV
+          fi
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.REGION }}
 
-      - name: Upload artifact to PROD bucket
+      - name: Upload ZIP to S3
         uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl private --follow-symlinks --exclude "*" --include "app.zip"
         env:
-          AWS_S3_BUCKET: ${{ env.PROD_BUCKET }}
+          AWS_S3_BUCKET: ${{ env.BUCKET_NAME }}
           AWS_REGION: ${{ env.REGION }}
-          SOURCE_DIR: "./build"
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SOURCE_DIR: ./
+
